// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render the expenses summary component with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $2,234,535,423.45
  </h1>
</div>
`;

exports[`should correctly render the expenses summary component with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
